
* GITHUB#984: Use primitive type data structures in FloatTaxonomyFacets and IntTaxonomyFacets
  #getAllChildren() internal implementation to avoid some garbage creation. (Greg Miller)

* GITHUB#1010: Specialize ordinal encoding for common case in SortedSetDocValues. (Greg Miller)

* LUCENE-10657: CopyBytes now saves one memory copy on ByteBuffersDataOutput. (luyuncheng)

Changes in runtime behavior
---------------------

* GITHUB#978: IndexWriter diagnostics written to index only contain java's runtime version
  and vendor. (Uwe Schindler)

Bug Fixes
---------------------

* LUCENE-10574: Prevent pathological O(N^2) merging. (Adrien Grand)

* LUCENE-10584: Properly support #getSpecificValue for hierarchical dims in SSDV faceting.
  (Greg Miller)

* LUCENE-10582: Fix merging of overridden CollectionStatistics in CombinedFieldQuery (Yannick Welsch)

* LUCENE-10598: SortedSetDocValues#docValueCount() should be always greater than zero. (Lu Xugang)

* LUCENE-10563: Fix failure to tessellate complex polygon (Craig Taverner)

* LUCENE-10605: Fix error in 32bit jvm object alignment gap calculation (Sun Wuqiang)

* GITHUB#956: Make sure KnnVectorQuery applies search boost. (Julie Tibshirani)

* LUCENE-10600: SortedSetDocValues#docValueCount should be an int, not long (Lu Xugang)

* LUCENE-10611: Fix failure when KnnVectorQuery has very selective filter (Kaival Parikh)

* LUCENE-10607: Fix potential integer overflow in maxArcs computions (Tang Donghai)

* GITHUB#986: Fix FieldExistsQuery rewrite when all docs have vectors. (Julie Tibshirani)

* LUCENE-10623: Error implementation of docValueCount for SortingSortedSetDocValues (Lu Xugang)

* GITHUB#1028: Fix error in TieredMergePolicy (Lin Jian)

Other
---------------------

* GITHUB#991: Update randomizedtesting to 2.8.0, hppc to 0.9.1, morfologik to 2.1.9. (Dawid Weiss)

* LUCENE-10370: pass proper classpath/module arguments for forking jvms from within tests. (Dawid Weiss)
