@@ -232,10 +232,7 @@ public abstract class PointRangeQuery extends Query {
           @Override
           public void visit(DocIdSetIterator iterator, byte[] packedValue) throws IOException {
             if (matches(packedValue) == false) {
-              int docID;
-              while ((docID = iterator.nextDoc()) != DocIdSetIterator.NO_MORE_DOCS) {
-                visit(docID);
-              }
+              visit(iterator);
             }
           }
 
